# meowverlay

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  index.html  package.json  plan.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
examples/: input_probe.rs
skins/default/: config.json
src/: app.rs  config.rs  input.rs  keycodes.rs  main.rs  main.ts  skin.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/input/: evdev_backend.rs  mod.rs
src/render/: catch.rs  mania.rs  mod.rs  standard.rs  taiko.rs
src/ui/: mod.rs  settings.rs
